# DDobok-backend

./: .gitignore  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
brands/: admin.py  models.py  serializers.py  urls.py  views.py
brands/migrations/: 0001_initial.py
config/: settings.py  urls.py
gis/: admin.py  models.py  serializers.py  urls.py  views.py
gis/migrations/: 0001_initial.py  0002_alter_gi_name_alter_gi_priority.py  0003_gi_photo_alter_gi_color.py
