[tool.poetry]
name = "ddobok-backend"
version = "0.1.0"
description = ""
authors = ["eakyoungyou <eakyoungyu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ddobok_backend"}]

[tool.poetry.dependencies]
python = "3.9.5"
django = "^4.1.5"
flake8 = "^6.0.0"
black = "^22.12.0"
pillow = "^9.4.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
